--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "author": "",
   "name": "michael-lam-blog",
-  "description": "blog desc",
-  "version": "0.0.0",
+  "description": "A blog on software engineering and web development",
+  "version": "0.0.1",
   "dependencies": {
     "stack": ">=0.0.3",
     "creationix": ">=0.1.2",
